# order_parameter

./: .coveragerc  .gitattributes  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  conda-lock.yml  environment.yml  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/order_parameter/: skeleton.py
tests/: conftest.py  test_skeleton.py
