[tool.poetry]
name = "quadrupolar-splitting"
version = "0.1.0"
description = "Calculates the order_parameter and predicted quadrupolar splitting"
authors = ["Diego Muñoz G."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^1.26.1"
pandas = "^2.1.2"
tqdm = "^4.66.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.3"
isort = "^5.12.0"
pyscaffold = "^4.5"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
